src/styles/layout/_container.scss
@use '../base/var' as *;
@use '../module/mixins' as *;
@use '../base/breakpoint' as *;

.l-container {
  @include display-flex();
  // width: 100%;
  // min-height: 100vh; // ocupa a tela toda
  height: 100vh;
  height: 100dvh;
  // padding-bottom: 1rem;

  @include breakpoint($sm){
    height: auto;
    padding-bottom: 0.5rem;
  }


  &__body {
    @include display-flex($flex-direction: row);
    flex: 1; // ocupa o espaço entre header e footer
    background-color: $gray-light;
    // width: 100%;
    min-height: 0;
    align-items: start;//ADICIONADO PARA RESOLVER BUG ESPACO GRANDE NOS RESUMOS

    @include breakpoint($md, max-width){
      flex-direction: column; 
    }
  }

  &__content {
    flex: 1; // ocupa todo o espaço restante
    padding: 1rem;
    background-color: $white;
    overflow-y: auto;
    width: 100%;
    //REMOVIDOS PARA RESOLVER BUG ESPACO GRANDE NOS RESUMOS
    // height: 100vh;
    // height: 100dvh;
    // min-height: 0;

    //NOVO CSS PARA RESOLVER BUG
    // min-height: 100vh;
     min-height: calc(100vh - 54px);
    // overflow-y: auto;

    @include breakpoint($md, max-width){
      padding: 0.5rem;
    }

  }

}

// @media (max-width: 768px) {
//   .l-container__body {
//     flex-direction: column;
//   }

//   .l-container__content {
//     padding: 0.5rem;
//   }
// }

